Committing a fix for bug 101149: kio_http does its own proxying, so no need to use KSocks for anything. This, however, means that kio_http no longer abides by the global SOCKS proxy rule -- then again, there's a specific KCM for configuring kio_http's proxies, with no option "use global SOCKS proxies". That's something to be fixed in the future.

To be backported.
BUG:101149

svn path=/trunk/kdelibs/; revision=396327